# serialupdi-terminal

./: .gitignore  LICENSE  README.md  setup.cfg
src/serialupdi_terminal/: settings.toml  updi_terminal.py
src/serialupdi_terminal/lib/: linkermap.py  monitor.ui  monitor_gui.py  smartsignal.py  updi_terminal.ui  updi_terminal_gui.py
