[metadata]
name = serialupdi-terminal
version = 0.0
author = Finn Drabsch
author_email = finndrabsch@gmail.com
description = Terminal for serial updi
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.12
install_requires =
    PySide6
    pymcuprog
    toml

[options.packages.find]
where=src

# [options.entry_points]
# console_scripts =
    # Add console entry points here
# gui_scripts =
    # Add gui entry points here
    